- I used “includes” in the search, so it no longer has to be the first letters to find a pokemon - the switch-right-button in the dialog is invisible then the list ends

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@
     display: flex;
     justify-content: center;
     margin-top: 20px;
+    padding-inline: 24px;
 }
 
 .show_main_content {
